# isograph

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
crates/isograph_cli/src/: batch_compile.rs  isograph_literals.rs
crates/isograph_lang_parser/src/: parse_iso_literal.rs
crates/isograph_schema/src/: validate_resolver_fetch.rs
crates/swc_isograph_plugin/: Cargo.toml
crates/swc_isograph_plugin/src/: lib.rs
crates/swc_isograph_plugin/transform/: Cargo.toml
crates/swc_isograph_plugin/transform/src/: lib.rs
crates/swc_isograph_plugin/transform/tests/: transform.rs
crates/swc_plugin/: Cargo.toml  package.json
crates/swc_plugin/src/: isograph.rs  lib.rs
demos/github-demo/: next.config.js  package.json
demos/github-demo/src/isograph-components/: avatar.tsx  comment_list.tsx  header.tsx  home_page.tsx  home_page_list.tsx  pull_request_detail.tsx  pull_request_link.tsx  pull_request_table.tsx  repository.tsx  repository_detail.tsx  repository_link.tsx  user.tsx  user_detail.tsx  user_link.tsx  user_repository_list.tsx
demos/graphql-conf-2023-demo/src/components/: home_route.tsx  pet_best_friend_card.tsx  pet_checkins_card.tsx  pet_detail_route.tsx  pet_phrase_card.tsx  pet_stats_card.tsx  pet_summary_card.tsx  pet_tagline_card.tsx  pet_updater.tsx
docs-website/docs/: backlog.md  intro.md  introduction.md  quickstart.md
docs-website/docs/how-isograph-works/: compiler.md  runtime.md
libs/isograph-babel-plugin/: README.md  compileTag.js
libs/isograph-react/src/: index.tsx
libs/isograph-swc-plugin/: package.json
