
[package]
authors = ["Robert Balicki <robert.balicki@gmail.com>", "Edmondo Porcu <edmondo.porcu@gmail.com>"]
description = "SWC plugin for Isograph"
edition = "2021"
license = "Apache-2.0"
name = "swc_isograph_plugin"
publish = false
version = "0.7.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.8.0"
regex = "1.5"
serde = "1"
serde_json = "1"
swc_common = { version = "0.33.17", features = ["concurrent"] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
swc_core = { version = "0.90.6", features = ["ecma_plugin_transform"] }
swc_isograph = { path = "./transform" }
swc_ecma_ast = "0.112.2"
swc_ecma_utils = "0.127.3"
swc_ecma_visit = "0.98.2"
swc_plugin_macro = "0.9.16"
