[package]
description  = "SWC plugin for Isograph"
name         = "swc_plugin_isograph"
version      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true } 


[lib]
crate-type = ["cdylib"]

[dependencies]
regex            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
swc_common = { version = "0.33.19", features = ["concurrent"] }
swc_core = { version = "0.90.22", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.112.5"
swc_ecma_utils = "0.127.12"
swc_ecma_visit = "0.98.6"
swc_plugin_macro = "0.9.16"
tracing          = { workspace = true, features = ["release_max_level_off"] }
