
[package]
authors = ["Robert Balicki <robert.balicki@gmail.com>", "Edmondo Porcu <edmondo.porcu@gmail.com>"]
description = "SWC plugin for Isographv"
edition = "2021"
license = "Apache-2.0"
name = "swc_isograph"
publish = false
version = "0.7.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
isograph_config = { path = "../../isograph_config" }

once_cell = "1.8.0"
regex = "1.5"
serde = "1"
serde_json = "1"
swc_atoms = "0.6.5"
swc_common = { version = "0.33.17", features = ["concurrent"] }
swc_ecma_ast = "0.112.2"
swc_ecma_utils = "0.127.3"
swc_ecma_visit = "0.98.2"
tracing = { version = "0.1.37" }

[dev-dependencies]
swc_ecma_transforms_testing = "0.140.3"
testing = "0.35.18"
